added Ui description

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
         <div class="bottom">
             <div class="add">
                 <div class="add__container">
-                    <select class="add__type">
+                    <select class="add__type" title="Select a budget type">
                         <option value="inc" selected>Income</option>
                         <option value="exp">Expenses</option>
                     </select>
-                    <input type="text" class="add__description" placeholder="Add description">
-                    <input type="number" class="add__value" placeholder="Value">
+                    <input type="text" class="add__description" placeholder="Budget Description" title="Add a brief budget description about it">
+                    <input type="number" class="add__value" placeholder=" Amount" title="Input the budget amount in ">
                     <button class="add__btn"><i class="icon-arrows-circle-check"></i></button>
                 </div>
             </div>
