added functionality to select the delete button -

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                         <option value="exp">Expenses</option>
                     </select>
                     <input type="text" class="add__description" placeholder="Budget Description" title="Add a brief budget description about it">
-                    <input type="number" class="add__value" placeholder=" Amount" title="Input the budget amount in ">
+                    <input type="number" class="add__value" placeholder=" Amount" title="Input the budget amount">
                     <button class="add__btn"><i class="icon-arrows-circle-check"></i></button>
                 </div>
             </div>
